doc/gram3.output
Grammar

    0 $accept: pipe_sequence $end

    1 pipe_sequence: simple_command
    2              | pipe_sequence PIPE simple_command

    3 simple_command: cmd_prefix cmd_word cmd_suffix
    4               | cmd_prefix cmd_word
    5               | cmd_prefix
    6               | cmd_name cmd_suffix
    7               | cmd_name

    8 cmd_name: WORD

    9 cmd_word: WORD

   10 cmd_prefix: io_redirect
   11           | cmd_prefix io_redirect
   12           | ASSIGNMENT_WORD
   13           | cmd_prefix ASSIGNMENT_WORD

   14 cmd_suffix: io_redirect
   15           | cmd_suffix io_redirect
   16           | WORD
   17           | cmd_suffix WORD

   18 io_redirect: io_file
   19            | io_here

   20 io_file: RET_TO filename
   21        | RET_FROM filename
   22        | DGREAT filename

   23 filename: WORD

   24 io_here: DLESS here_end

   25 here_end: WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 8 9 16 17 23 25
ASSIGNMENT_WORD (259) 12 13
RET_TO (260) 20
RET_FROM (261) 21
PIPE (262) 2
DLESS (263) 24
DGREAT (264) 22


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
pipe_sequence (11)
    on left: 1 2, on right: 0 2
simple_command (12)
    on left: 3 4 5 6 7, on right: 1 2
cmd_name (13)
    on left: 8, on right: 6 7
cmd_word (14)
    on left: 9, on right: 3 4
cmd_prefix (15)
    on left: 10 11 12 13, on right: 3 4 5 11 13
cmd_suffix (16)
    on left: 14 15 16 17, on right: 3 6 15 17
io_redirect (17)
    on left: 18 19, on right: 10 11 14 15
io_file (18)
    on left: 20 21 22, on right: 18
filename (19)
    on left: 23, on right: 20 21 22
io_here (20)
    on left: 24, on right: 19
here_end (21)
    on left: 25, on right: 24


state 0

    0 $accept: . pipe_sequence $end

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RET_TO           shift, and go to state 3
    RET_FROM         shift, and go to state 4
    DLESS            shift, and go to state 5
    DGREAT           shift, and go to state 6

    pipe_sequence   go to state 7
    simple_command  go to state 8
    cmd_name        go to state 9
    cmd_prefix      go to state 10
    io_redirect     go to state 11
    io_file         go to state 12
    io_here         go to state 13


state 1

    8 cmd_name: WORD .

    $default  reduce using rule 8 (cmd_name)


state 2

   12 cmd_prefix: ASSIGNMENT_WORD .

    $default  reduce using rule 12 (cmd_prefix)


state 3

   20 io_file: RET_TO . filename

    WORD  shift, and go to state 14

    filename  go to state 15


state 4

   21 io_file: RET_FROM . filename

    WORD  shift, and go to state 14

    filename  go to state 16


state 5

   24 io_here: DLESS . here_end

    WORD  shift, and go to state 17

    here_end  go to state 18


state 6

   22 io_file: DGREAT . filename

    WORD  shift, and go to state 14

    filename  go to state 19


state 7

    0 $accept: pipe_sequence . $end
    2 pipe_sequence: pipe_sequence . PIPE simple_command

    $end  shift, and go to state 20
    PIPE  shift, and go to state 21


state 8

    1 pipe_sequence: simple_command .

    $default  reduce using rule 1 (pipe_sequence)


state 9

    6 simple_command: cmd_name . cmd_suffix
    7               | cmd_name .

    WORD      shift, and go to state 22
    RET_TO    shift, and go to state 3
    RET_FROM  shift, and go to state 4
    DLESS     shift, and go to state 5
    DGREAT    shift, and go to state 6

    $default  reduce using rule 7 (simple_command)

    cmd_suffix   go to state 23
    io_redirect  go to state 24
    io_file      go to state 12
    io_here      go to state 13


state 10

    3 simple_command: cmd_prefix . cmd_word cmd_suffix
    4               | cmd_prefix . cmd_word
    5               | cmd_prefix .
   11 cmd_prefix: cmd_prefix . io_redirect
   13           | cmd_prefix . ASSIGNMENT_WORD

    WORD             shift, and go to state 25
    ASSIGNMENT_WORD  shift, and go to state 26
    RET_TO           shift, and go to state 3
    RET_FROM         shift, and go to state 4
    DLESS            shift, and go to state 5
    DGREAT           shift, and go to state 6

    $default  reduce using rule 5 (simple_command)

    cmd_word     go to state 27
    io_redirect  go to state 28
    io_file      go to state 12
    io_here      go to state 13


state 11

   10 cmd_prefix: io_redirect .

    $default  reduce using rule 10 (cmd_prefix)


state 12

   18 io_redirect: io_file .

    $default  reduce using rule 18 (io_redirect)


state 13

   19 io_redirect: io_here .

    $default  reduce using rule 19 (io_redirect)


state 14

   23 filename: WORD .

    $default  reduce using rule 23 (filename)


state 15

   20 io_file: RET_TO filename .

    $default  reduce using rule 20 (io_file)


state 16

   21 io_file: RET_FROM filename .

    $default  reduce using rule 21 (io_file)


state 17

   25 here_end: WORD .

    $default  reduce using rule 25 (here_end)


state 18

   24 io_here: DLESS here_end .

    $default  reduce using rule 24 (io_here)


state 19

   22 io_file: DGREAT filename .

    $default  reduce using rule 22 (io_file)


state 20

    0 $accept: pipe_sequence $end .

    $default  accept


state 21

    2 pipe_sequence: pipe_sequence PIPE . simple_command

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RET_TO           shift, and go to state 3
    RET_FROM         shift, and go to state 4
    DLESS            shift, and go to state 5
    DGREAT           shift, and go to state 6

    simple_command  go to state 29
    cmd_name        go to state 9
    cmd_prefix      go to state 10
    io_redirect     go to state 11
    io_file         go to state 12
    io_here         go to state 13


state 22

   16 cmd_suffix: WORD .

    $default  reduce using rule 16 (cmd_suffix)


state 23

    6 simple_command: cmd_name cmd_suffix .
   15 cmd_suffix: cmd_suffix . io_redirect
   17           | cmd_suffix . WORD

    WORD      shift, and go to state 30
    RET_TO    shift, and go to state 3
    RET_FROM  shift, and go to state 4
    DLESS     shift, and go to state 5
    DGREAT    shift, and go to state 6

    $default  reduce using rule 6 (simple_command)

    io_redirect  go to state 31
    io_file      go to state 12
    io_here      go to state 13


state 24

   14 cmd_suffix: io_redirect .

    $default  reduce using rule 14 (cmd_suffix)


state 25

    9 cmd_word: WORD .

    $default  reduce using rule 9 (cmd_word)


state 26

   13 cmd_prefix: cmd_prefix ASSIGNMENT_WORD .

    $default  reduce using rule 13 (cmd_prefix)


state 27

    3 simple_command: cmd_prefix cmd_word . cmd_suffix
    4               | cmd_prefix cmd_word .

    WORD      shift, and go to state 22
    RET_TO    shift, and go to state 3
    RET_FROM  shift, and go to state 4
    DLESS     shift, and go to state 5
    DGREAT    shift, and go to state 6

    $default  reduce using rule 4 (simple_command)

    cmd_suffix   go to state 32
    io_redirect  go to state 24
    io_file      go to state 12
    io_here      go to state 13


state 28

   11 cmd_prefix: cmd_prefix io_redirect .

    $default  reduce using rule 11 (cmd_prefix)


state 29

    2 pipe_sequence: pipe_sequence PIPE simple_command .

    $default  reduce using rule 2 (pipe_sequence)


state 30

   17 cmd_suffix: cmd_suffix WORD .

    $default  reduce using rule 17 (cmd_suffix)


state 31

   15 cmd_suffix: cmd_suffix io_redirect .

    $default  reduce using rule 15 (cmd_suffix)


state 32

    3 simple_command: cmd_prefix cmd_word cmd_suffix .
   15 cmd_suffix: cmd_suffix . io_redirect
   17           | cmd_suffix . WORD

    WORD      shift, and go to state 30
    RET_TO    shift, and go to state 3
    RET_FROM  shift, and go to state 4
    DLESS     shift, and go to state 5
    DGREAT    shift, and go to state 6

    $default  reduce using rule 3 (simple_command)

    io_redirect  go to state 31
    io_file      go to state 12
    io_here      go to state 13
